--- a/style.css
+++ b/style.css
@@ -20,10 +20,17 @@ body{
 	background-color:#ebe3ce;
 }
 
-#container{
-    width: 95%;
+
+.header-container,.body-container, .footer-container{
+    max-width: 1080px;
     margin: 0 auto;
 
+}
+
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
 
 #nav {
