--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ body{
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
+img{
+
+	border:0;
+
+}
+
 #nav {
     padding: 0;
 	  list-style-type: none;
