--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 /*styles go here*/
 
+html { font-size: 100%
+
+}
+
+body {
+    margin:50px 0px; padding:0px;
+    text-align:center;
+}
 
 p {
 	color: #666666;
   font-family: 'Merriweather', Georgia,"Times New Roman", serif;
-	font-size: 1rem;
+	font-size: 1.5rem;
 	line-height: 1.5rem;
+	background-color: #FF9D88
 }
 
+.header-container,.body-container, .footer-container{
+    max-width: 1080px;
+    margin: 0 auto;
+
+}
 .italic {
 		font-style: italic;
 }
@@ -20,22 +34,18 @@ body{
 	background-color:#ebe3ce;
 }
 
+ul{
 
-.header-container,.body-container, .footer-container{
-    max-width: 1080px;
-    margin: 0 auto;
+list-style: none;
+padding: 0;
+list-style-type: none;
+text-decoration: none;
 
-}
-
-.Absolute-Center {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
 }
 
 img{
 
-	border:0;
+	border: none;
 
 }
 
@@ -48,21 +58,30 @@ img{
 	  margin:0;
 		padding: 0;
 		border-bottom: 1px solid #ccc;
+		list-style: none;
+		padding: 0;
+		list-style-type: none;
+		text-decoration: none;
+		background-color: #FF4922;
+
+
 }
 #nav a:link, #nav a:visited {
 display: block;
 color: #fff;
-background-color: #98bd21;
+background-color: #FF4922;
 font-weight: bold;
 text-align: center;
 text-decoration: none;
 padding: 4px;
 font-family: Helvetica, Arial, sans-serif;
 
+
+
 }
 
 #nav a:hover, #nav a:active {
-		background-color: #7a991a;
+		background-color: #FFB5A5;
 
 }
 
@@ -70,7 +89,7 @@ font-family: Helvetica, Arial, sans-serif;
 		color: black;
 		font-family: Georgia, "Times New Roman", serif;
 		font-style: italic;
-		font size: 0.8em;
+		font-size: 0.8rem;
 		text-align: right;
 }
 
@@ -80,16 +99,3 @@ font-family: Helvetica, Arial, sans-serif;
 	font-size: 0.8em;
 	border-top: 1px solid black;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-{}
