--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ font-family: Helvetica, Arial, sans-serif;
 
 }
 
+
 #nav a:hover, #nav a:active {
 		background-color: #FFB5A5;
 
@@ -98,4 +99,23 @@ font-family: Helvetica, Arial, sans-serif;
 	font-family: Georgia, "Times New Roman", serif;
 	font-size: 0.8em;
 	border-top: 1px solid black;
+}
+
+
+#nav {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 600px) {
+
+  #nav {
+    flex direction: row;
+    justify-content: center;
+  }
+}
+
+@media (min-width:800 px) {
+
+
 }
