--- a/style.css
+++ b/style.css
@@ -100,22 +100,51 @@ font-family: Helvetica, Arial, sans-serif;
 	font-size: 0.8em;
 	border-top: 1px solid black;
 }
+* {
+	box-sizing: border-box;
+}
+body {
+	font-size: 1em;
+	font-family: 'Merriweather Sans', sans-serif;
+	color: #fff;
+	background: #e8e9e9;
+	padding-left: 5%;
+	padding-right: 5%;
+}
+.container {
+	padding: 10px;
+	background: #fff;
+  	border-radius: 5px;
+	margin: 45px auto;
+  	box-shadow: 0 1.5px 0 0 rgba(0,0,0,0.1);
+}
+.item {
+	color: #000;
+	padding: 15px;
+	margin: 5px;
+	background: #f1b82d;
+	border-radius: 3px;
+}
 
-
-#nav {
-  display: flex;
-  flex-direction: column;
+.container {
+	display: flex;
+	flex-direction: column;
 }
 
 @media (min-width: 600px) {
-
-  #nav {
-    flex direction: row;
-    justify-content: center;
-  }
+	.container {
+		flex-direction: row;
+		justify-content: center;
+    text-align: center;
+	}
 }
 
-@media (min-width:800 px) {
+@media (min-width: 800px) {
+
+	.item-1 {
+		margin-right: auto;
+	}
+}
 
 
 }
