--- a/style.css
+++ b/style.css
@@ -9,6 +9,32 @@ body {
     text-align:center;
 }
 
+.title {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.cards {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    gap: 20px;
+    /*grid-column-gap: 10px;
+    grid-row-gap: 25px; */
+}
+
+.cards li {
+    background-color: #f1b82d;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+
 p {
 	color: #666666;
   font-family: 'Merriweather', Georgia,"Times New Roman", serif;
@@ -144,7 +170,5 @@ body {
 	.item-1 {
 		margin-right: auto;
 	}
-}
-
 
 }
