--- a/style.css
+++ b/style.css
@@ -157,6 +157,11 @@ body {
 	flex-direction: row;
 }
 
+.cards {
+    max-width: 800px;
+    min-width: 200px;
+  }
+
 @media (min-width: 600px) {
 	.container {
 		flex-direction: row;
